--- a/styles.css
+++ b/styles.css
@@ -440,7 +440,7 @@
     border-radius: 0.5em;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
-    width: max-content;
+    width: 100%;
     height: 100%;
 }
 
@@ -455,7 +455,10 @@
 .que.stateful div.stateful-order-container div.stateful-order-list {
     border: 0.1em solid black;
     border-radius: 0.5em;
-    width: max-content;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .que.stateful div.stateful-order-container div.stateful-order-shufflebox span.stateful-order-shufflebox-label {
@@ -464,14 +467,36 @@
     padding: 0.2em;
     margin: 0;
     font-weight: bolder;
+    display: inline-block;
+    width: 100%;
 }
 
-.que.stateful div.stateful-order-container-horizontal div.stateful-order-shufflebox span.stateful-order-shufflebox-label {
-    border-right: 0.1em solid black;
+.que.stateful div.stateful-order-container div.stateful-order-list span.stateful-order-list-label {
+    border-bottom: 0.1em solid black;
     text-align: center;
     padding: 0.2em;
     margin: 0;
     font-weight: bolder;
+    display: inline-block;
+    width: 100%;
+}
+
+.que.stateful div.stateful-order-container-horizontal div.stateful-order-shufflebox span.stateful-order-shufflebox-label {
+    border-bottom: 0.1em solid black;
+    text-align: center;
+    padding: 0.2em;
+    margin: 0;
+    font-weight: bolder;
+    display: block;
+}
+
+.que.stateful div.stateful-order-container-horizontal div.stateful-order-list span.stateful-order-list-label {
+    border-bottom: 0.1em solid black;
+    text-align: center;
+    padding: 0.2em;
+    margin: 0;
+    font-weight: bolder;
+    display: block;
 }
 
 .que.stateful div.stateful-order-container .stateful-order-indent-plus,
